# GameEngine

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  GameEngine - Verknüpfung.lnk  README.md  Test.esc  imgui.ini  main.cpp
.github/workflows/: C-Cpp-build.yml  build-mac.yml  build-unix.yml  build-win.yml  c-cpp.yml
Debug/: imgui.ini
extension/tischler/: CMakeLists.txt  entry.cpp
extensions/animation/: CMakeLists.txt  entry.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Engine.h  predefined_classes.h
include/component/: engine_component.h  engine_component_handler.h  engine_mesh_component.h  engine_sprite_component.h
include/core/: engine_application.h
include/file/: engine_file.h
include/graphics/: engine_buffer.h  engine_camera.h  engine_frame_buffer.h  engine_light.h  engine_render_command_queue.h  engine_render_context.h  engine_renderer.h  engine_shader.h  engine_texture.h  engine_ui_renderer.h  engine_vertex_array.h  engine_window.h
include/platform/opengl/: engine_opengl_buffer.h  engine_opengl_render_context.h  engine_opengl_shader.h  engine_opengl_texture.h
include/properties/: engine_json_converter.h  engine_property.h
include/resource/: engine_mesh.h  engine_resource.h  engine_sprite.h
include/scene/: engine_scene.h
include/scene/object/: engine_object.h  engine_scene_object.h
include/ui/: engine_input_field.h  engine_widget.h
include/util/: engine_timer.h
plugins/: Animation.epl  libAnimation.epl
res/: TestMesh.fbx  TestScene.esc
src/: Engine.h  predefined_classes.h  std_include.h
src/component/: engine_component.cpp  engine_component.h  engine_component_handler.cpp  engine_mesh_component.cpp  engine_sprite_component.cpp
src/core/: engine_application.cpp  engine_application.h  engine_macro_helper.h  engine_ui_manager.cpp
src/event/: engine_event_dispatcher.h
src/extensions/: engine_extension.h  engine_extension_manager.cpp  engine_extension_manager.h
src/file/: engine_file.cpp  engine_file.h  engine_file_collection.cpp  engine_file_collection.h  engine_file_reader.cpp  engine_file_reader.h  engine_file_writer.cpp  engine_file_writer.h  engine_folder.cpp  engine_folder.h  engine_shared_buffer.cpp  engine_shared_buffer.h
src/graphics/: engine_buffer.cpp  engine_buffer.h  engine_camera.cpp  engine_camera.h  engine_frame_buffer.cpp  engine_render_command_queue.cpp  engine_render_command_queue.h  engine_render_context.cpp  engine_render_context.h  engine_renderer.cpp  engine_renderer.h  engine_shader.cpp  engine_shader.h  engine_shader_uniforms.h  engine_texture.cpp  engine_texture.h  engine_ui_renderer.cpp  engine_ui_renderer.h  engine_vertex_array.cpp  engine_window.cpp  engine_window.h
src/platform/: engine_platform.h
src/platform/macos/: engine_platform_macos.mm
src/platform/opengl/: engine_opengl_buffer.cpp  engine_opengl_buffer.h  engine_opengl_render_context.cpp  engine_opengl_render_context.h  engine_opengl_shader.cpp  engine_opengl_shader.h  engine_opengl_texture.cpp  engine_opengl_texture.h
src/platform/win32/: engine_platform_win32.cpp
src/properties/: engine_json_converter.cpp  engine_json_converter.h  engine_property.cpp  engine_property.h
src/resource/: engine_mesh.cpp  engine_mesh.h  engine_resource.cpp  engine_resource.h  engine_resource_loader.h  engine_resource_manager.cpp  engine_resource_manager.h  engine_sprite.cpp  engine_sprite.h
src/scene/: engine_scene.cpp  engine_scene.h  engine_uuid.cpp  engine_uuid.h
src/scene/object/: engine_object.cpp  engine_object.h  engine_scene_object.cpp
src/ui/: engine_panels.cpp  engine_panels.h  engine_ui.cpp  engine_ui.h  engine_ui_fields.cpp  engine_ui_fields.h  engine_ui_functions.cpp  engine_ui_functions.h  engine_ui_manager.cpp  engine_ui_manager.h  engine_widget.cpp
src/util/: engine_camera_helper.cpp  engine_camera_helper.h  engine_timer.cpp
